--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Catbird Analytics"
-subtitle: "Analytics for the Catbird Seat"
+subtitle: "Analytics from the Catbird Seat"
 listing:
   contents: posts
   sort: "date desc"
