ok let us see changes in about pg. hopefully nothing else.

--- a/about.qmd
+++ b/about.qmd
@@ -1,8 +1,9 @@
 ---
 title: "About"
-image: avatar.jpg
+image: avatar_sm.png
 about:
   template: trestles
+  image-width: 10em
   links:
     - icon: linkedin
       text: LinkedIn
